./deploy - delete of file order sources tried to delete locks - fixed